# aeka-knowledge-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-staging.yml
AI Skills/api-security-expert/: README.md  SKILL.md
AI Skills/api-security-lint/: README.md  SKILL.md
AI Skills/dockerfile-security-lint/: README.md  SKILL.md
AI Skills/pp-frontend-review-main/: CHANGELOG.md  INSTALL.md  NOTICE.md  README.md
AI Skills/prodsec-toolkit-main/: CLAUDE.md  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: escalator.py  graph.py  guardrails.py  researcher.py  router.py  validator.py
backend/app/agents/evaluation/: drift_detector.py  metrics.py  test_suite.py
backend/app/api/routes/: auth.py  chat.py  documents.py  feedback.py  mcp_routes.py  metrics.py  review.py  search.py
backend/app/core/: auth.py  budget.py  config.py  dependencies.py  middleware.py  observability.py  rate_limit.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 001_initial_schema.py  002_add_fts_index.py  003_add_user_ownership.py  004_add_feedback.py
backend/app/mcp/: server.py
backend/app/models/: document.py  user.py
backend/app/services/: embedding.py  ingestion.py  llm.py  retrieval.py  storage.py
backend/tests/: conftest.py  eval_dataset.json  test_auth.py  test_budget.py  test_documents.py  test_guardrails.py  test_health.py  test_ingestion.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: globals.css  (+2 more)
infrastructure/docker/: init-db.sql
infrastructure/observability/: otel-config.yaml
(+43 files in other folders)
